# ultimate-asepharyana.tech

./: .DOCKERFILE  .dockerignore  .gitignore  .gitmodules  .prettierignore  2updatebuild.sh  2updateenv.sh  Cargo.toml  GEMINI.md  README.md  bunfig.toml  cacheclear.sh  check_apis.sh  cleanbuild.sh  cleanmodule.ps1  cleanmodule.sh  commit.ps1  commit.sh  commitwkwkkw.sh  createkey.sh  dbrun.ps1  dev.sh  docker-compose.yml  dockerbuild.ps1  ecosystem.config.js  eslint.config.mjs  ffmpegsetup.sh  flake.nix  fowarddb.ps1  gitconfig.sh  jest.config.ts  linuxsetup.sh  lupdatebuild.sh  nextjs.config.cjs  nobleubuntu.sh  nodepnpmyarn.sh  nx.json  package.json  pathturbo.sh  pm2setup.sh  (+26 more)
apps/rust/: .env.example  .gitignore  AUTH_COMPLETE_DOCUMENTATION.md  AUTH_DOCUMENTATION.md  AUTH_IMPLEMENTATION_SUMMARY.md  BEST_PRACTICES.md  CHAT_SETUP.md  Cargo.toml  Dockerfile  EMAIL_SYSTEM_DOCUMENTATION.md  GEMINI.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPROVEMENTS.md  README.md  SECURITY_AUDIT.md  TESTING.md  build.md  build.rs  check_image_cache_db.sh  clippy.toml  docker-compose.test.yml  docker-compose.yml  ecosystem.config.cjs  ensure-chat-tables.sql  fix-migration-history.ps1  fix-migrations.sql  force-reset-migration.sh  generate-entities.ps1  generate-entities.sh  openapi_output.json  output.json  package.json  project.json  quick-migration-fix.sh  reset-db.ps1  rust.config.cjs  rustexpress.service  rustfmt.toml  safe-migration-reset.ps1  safe-migration-reset.sh  (+10 more)
apps/rust/build_utils/: auto_mod_generator.rs  constants.rs  errors.rs  handler_template.rs  handler_updater.rs  hash_utils.rs  mod.rs  mod_generator.rs  openapi_auto_generator.rs  openapi_generator.rs  path_utils.rs  route_registry.rs  route_scanner.rs  template_generator.rs  types.rs
apps/rust/build_utils/handler_updater/: param_parsing.rs  response_enhancement.rs  schema_injection.rs  utoipa_generation.rs
apps/rust/migrations/: 20250902100000_create_chat_messages_table.sql  20251031162909_create_users_table.sql  20251031180000_create_chat_tables.sql  20251031190000_seed_chat_data.sql  20251101013643_update_users_auth_system.sql
apps/rust/scripts/: auto-lint.sh  migrate.sh  pre-build-lint.sh
apps/rust/src/: config.rs  error.rs  fetch_with_proxy.rs  image_proxy.rs  jwt.rs  komik_base_url.rs  lib.rs  main.rs  ratelimit.rs  redis_client.rs  seed.rs  startup.rs  types.rs  urls.rs  versioning.rs
apps/rust/src/audit/: logger.rs  mod.rs
apps/rust/src/auth/: api_key.rs  gate.rs  mod.rs  oauth.rs  password_reset.rs  permission.rs  remember_me.rs  role.rs  totp.rs
apps/rust/src/bootstrap/: mod.rs
apps/rust/src/broadcasting/: broadcaster.rs  mod.rs
apps/rust/src/browser/: mod.rs  pool.rs  pool_test.rs
apps/rust/src/circuit_breaker/: breaker.rs  mod.rs
apps/rust/src/core/: config.rs  error.rs  jwt.rs  mod.rs  types.rs
apps/rust/src/di/: container.rs  mod.rs
apps/rust/src/entities/: account.rs  bookmarks.rs  chat_message.rs  chat_message_room.rs  chat_room.rs  chat_room_member.rs  comments.rs  email_verification_token.rs  image_cache.rs  likes.rs  mod.rs  password_reset_token.rs  permission.rs  posts.rs  prelude.rs  replies.rs  role.rs  role_permission.rs  session.rs  user.rs  user_role.rs
apps/rust/src/events/: bus.rs  mod.rs
apps/rust/src/extractors/: mod.rs  validated.rs
apps/rust/src/features/: flags.rs  mod.rs
apps/rust/src/graceful/: cleanup.rs  mod.rs  shutdown.rs
apps/rust/src/graphql/: handlers.rs  mod.rs  schema.rs
apps/rust/src/health/: endpoints.rs  mod.rs
apps/rust/src/helpers/: anime2_cache.rs  api_response.rs  async_utils.rs  bulk.rs  cache.rs  cache_tags.rs  cache_ttl.rs  collections.rs  console.rs  convert.rs  crypto.rs  datetime.rs  email_template.rs  encryption.rs  errors.rs  file.rs  form_request.rs  handler.rs  health_check.rs  image_cache.rs  import_export.rs  json.rs  memory.rs  mod.rs  numbers.rs  pagination.rs  performance.rs  prelude.rs  profile_storage.rs  query.rs  query_profiler.rs  resource.rs  response.rs  result_ext.rs  scraping.rs  searchable.rs  security.rs  signed_url.rs  sluggable.rs  soft_delete.rs  (+9 more)
apps/rust/src/i18n/: mod.rs  translator.rs
apps/rust/src/infra/: db_setup.rs  http_client.rs  image_proxy.rs  mod.rs  proxy.rs  redis.rs
apps/rust/src/jobs/: mod.rs  queue.rs  worker.rs
apps/rust/src/middleware/: auth.rs  logging.rs  maintenance.rs  mod.rs  registry.rs
apps/rust/src/models/: anime2.rs  mod.rs  types.rs  user.rs
apps/rust/src/notifications/: channels.rs  mod.rs  notifier.rs
apps/rust/src/observability/: metrics.rs  mod.rs  request_id.rs
apps/rust/src/routes/: api_routes.hash  handlers.rs  mod.rs
apps/rust/src/routing/: mod.rs  versioning.rs
apps/rust/src/scheduler/: cleanup_cache.rs  cleanup_rooms.rs  mod.rs  runner.rs
apps/rust/src/scraping/: anime2.rs  mod.rs  ryzen_cdn.rs
apps/rust/src/security/: csrf.rs  mod.rs
apps/rust/src/seeder/: mod.rs  runner.rs  seed.rs
apps/rust/src/services/: mod.rs
apps/rust/src/session/: middleware.rs  mod.rs  store.rs
apps/rust/src/storage/: driver.rs  local.rs  mod.rs  s3.rs
apps/rust/src/testing/: app.rs  mod.rs
apps/rust/src/typescript/: generator.rs  mod.rs  types.ts.template
apps/rust/src/utils/: auth.rs  cdn.rs  email.rs  email_queue.rs  error.rs  headers.rs  http.rs  mod.rs
apps/rust/src/webhooks/: handler.rs  mod.rs
apps/rust/src/ws/: handler.rs  message.rs  mod.rs  room.rs
apps/rust/tools/auto-lint/: Cargo.toml
apps/visuals/: Cargo.toml  Dockerfile  Trunk.toml  index.html
apps/visuals/src/: main.rs
libs/rust/: Cargo.toml
libs/rust/examples/: headless_chrome_example.rs
libs/rust/src/: api_wrapper.rs  bookmarks.rs  config.rs  cors.rs  error.rs  fetch_with_proxy.rs  headless_chrome.rs  image_proxy.rs  jwt.rs  komik_base_url.rs  lib.rs  ratelimit.rs  redis_client.rs  ryzen_cdn.rs  scrape_croxy_proxy.rs  urls.rs
libs/rust/src/chromiumoxide/: browser_pool.rs  config.rs  error.rs  mod.rs  stealth.rs  tab_manager.rs
libs/rust/src/headless_chrome/: README.md  browser_pool.rs  config.rs  error.rs  mod.rs  stealth.rs  tab_manager.rs
libs/rust/src/models/: anime.rs  mod.rs  (+3 more)
(+1454 files in other folders)
