[workspace]
resolver = "2"
members = [
    "apps/rust",
    "libs/rust",
]

[workspace.dependencies]
# --- WEB & ASYNC RUNTIME ---
axum = { version = "0.7.5", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1.37.0", features = ["full"] }
hyper = "1.3.1"
http = "1.1.0"
futures = "0.3"
async-trait = "0.1.80"

# --- SERIALIZATION & CONFIG ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
dotenvy = "0.15"
envy = "0.4"
url = "2.5.2"
urlencoding = "2.1"

# --- LOGGING & ERROR HANDLING ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0.61"

# --- DATABASE & PERSISTENCE ---
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }

# --- OPENAPI DOCUMENTATION (FIXED VERSIONS) ---
# Menggunakan versi 4.x dengan fitur 'axum_extras' yang benar untuk axum v0.7
utoipa = { version = "4.2.3", features = ["axum_extras"] }
# Menggunakan versi 7.x dengan fitur 'axum' yang benar untuk axum v0.7
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

# --- UTILITIES ---
once_cell = "1.19.0"
regex = "1.10.4"
bytes = "1.6.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
sha1 = "0.10.6"
base64 = "0.22.1"
tempfile = "3.10.1"
rand = "0.8.5"

# --- EXTERNAL LIBRARIES & PARSING ---
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
data-url = "0.3.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
scraper = "0.19.0"
oxidize-pdf = "1.2.0" # crates.io latest version
infer = "0.16.0"
ffmpeg-next = "7.0.0"
headless_chrome = "1.0.17"
mime_guess = "2.0.5"
socks = "0.3.4"

# --- LIBS ---
rust_lib = { path = "libs/rust" }

# --- DEVELOPMENT DEPENDENCIES ---

