[workspace]
resolver = "2"
members = [
    "apps/rust",
    "libs/rust",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
# --- WEB & ASYNC RUNTIME ---
axum = { version = "0.8.4", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tokio = { version = "1.47.1", features = ["full"] }
hyper = "1.7.0"
http = "1.3.1"
futures = "0.3"
async-trait = "0.1.89"

# --- SERIALIZATION & CONFIG ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
dotenvy = "0.15"
envy = "0.4"
url = "2.5.7"
urlencoding = "2.1"

# --- LOGGING & ERROR HANDLING ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0.16"
env_logger = "0.11"
log = "0.4"

# --- DATABASE & PERSISTENCE ---
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }

# --- OPENAPI DOCUMENTATION (FIXED VERSIONS) ---
# Menggunakan versi 4.x dengan fitur 'axum_extras' yang benar untuk axum v0.7
utoipa = { version = "5.4.0", features = ["axum_extras"] }
# Menggunakan versi 7.x dengan fitur 'axum' yang benar untuk axum v0.7
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# --- UTILITIES ---
once_cell = "1.21.3"
regex = "1.11.2"
bytes = "1.10.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
sha1 = "0.10.6"
base64 = "0.22.1"
tempfile = "3.21.0"
rand = "0.9.2"

# --- EXTERNAL LIBRARIES & PARSING ---
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
data-url = "0.3.2"
tokio-util = { version = "0.7.16", features = ["codec"] }
scraper = "0.24.0"
oxidize-pdf = "1.2.0" # crates.io latest version
infer = "0.19.0"
ffmpeg-next = "8"
headless_chrome = "1.0.18"
mime_guess = "2.0.5"
lazy_static = "1.4"
socks = "0.3.4"

# --- LIBS ---
rust_lib = { path = "libs/rust" }

# --- DEVELOPMENT DEPENDENCIES ---

# --- BUILD & DEV TOOLS ---
blake3 = "1.5.0"
itertools = "0.12"
rayon = "1.8"
walkdir = "2.3"
