
[workspace]
resolver = '2'
members = [
	'apps/rust',
    'apps/leptos',
]
[profile.dev]
opt-level = 0          # paling cepat compile (runtime agak lambat, tapi cukup buat dev)
debug = true
incremental = true     # cache per crate biar rebuild lebih cepat
codegen-units = 16     # pecah kerjaan jadi banyak unit, cepat compile
lto = false
strip = "none"         # jangan strip biar debugging gampang

[profile.release]
opt-level = 3          # maksimal speed
lto = "fat"            # optimasi maksimal (thin lebih cepat tapi kurang optimal)
codegen-units = 1      # lebih optimal, walau compile lebih lama
strip = "symbols"      # buang simbol debug → binary lebih kecil
panic = "abort"        # kurangi overhead unwinding
