[profile.dev]
opt-level = 0          # paling cepat compile (runtime agak lambat, tapi cukup buat dev)
debug = true
incremental = true     # cache per crate biar rebuild lebih cepat
codegen-units = 16     # pecah kerjaan jadi banyak unit, cepat compile
lto = false
strip = "none"         # jangan strip biar debugging gampang

[profile.release]
opt-level = 3          # maksimal speed
lto = "fat"            # optimasi maksimal (thin lebih cepat tapi kurang optimal)
codegen-units = 1      # lebih optimal, walau compile lebih lama
strip = "symbols"      # buang simbol debug → binary lebih kecil
panic = "abort"        # kurangi overhead unwinding
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# Dependensi yang dibutuhkan saat aplikasi berjalan
[dependencies]
axum = { version = "0.8.4", features = ["ws", "multipart", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.10.1"
futures = "0.3"
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
http = "1.3.1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
sha1 = "0.10.6"
data-url = "0.3.2"
base64 = "0.22.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
async-trait = "0.1.89"
regex = "1.11.2"
oxidize-pdf = "1.2.0"
infer = "0.19.0"
ffmpeg-next = { version = "8", optional = true }
once_cell = "1.21.3"
urlencoding = "2.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
hyper = "1.7.0"
url = "2.5.7"
rand = "0.9.2"
tempfile = "3.22.0"
mime_guess = "2.0.5"
lazy_static = "1.5"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
backoff = { version = "0.4", features = ["futures", "tokio"] }
dashmap = "6.1"
deadpool-redis = { version = "0.22.0", features = ["serde"] }
rayon = "1.11"
tl = "0.7.8"
tower = { version = "0.5", features = ["make"] }
scraper = "0.24.0"
failure = "0.1"
flate2 = "1.1"
redis = { version = "0.32.5", features = ["tokio-comp"] }
thiserror = "2.0.16"
itertools = "0.14"


# Dependensi yang hanya dibutuhkan untuk build script (build.rs)
[build-dependencies]
tempfile = "3.22.0"
blake3 = "1.8.2"
regex = "1.11.2"
anyhow = "1.0"
once_cell = "1.21.3"
env_logger = "0.11"
thiserror = "2.0.16"
log = "0.4"
itertools = "0.14"
rayon = "1.11"
walkdir = "2.5"
openapiv3 = "2.2.0"
jsonschema = "0.33.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }

# Dependensi yang hanya dibutuhkan untuk tes
[dev-dependencies]

# Definisi binary untuk scaffolder
[[bin]]
name = "scaffold"
path = "src/bin/scaffold.rs"
[[bin]]
name = "test_scaffold"
path = "src/bin/test_scaffold.rs"

[[bin]]
name = "test_apis"
path = "src/bin/test_apis.rs"

# [[bin]]
# name = "test_openapi"
# path = "src/bin/test_openapi.rs"


[features]
# default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next"]
