
[package]
name = "rustexpress"
version = "0.1.0"
edition = "2021"
description = "A batteries-included, production-ready Rust web framework built on Axum"
authors = ["Asep Haryana"]
license = "MIT"
repository = "https://github.com/MythEclipse/ultimate-asepharyana.cloud"
keywords = ["web", "framework", "axum", "api", "rest"]
categories = ["web-programming::http-server", "web-programming::websocket"]
build = "build.rs"
default-run = "rustexpress"

# Dependensi yang dibutuhkan saat aplikasi berjalan
[dependencies]
axum = { version = "0.8.8", features = ["ws", "multipart", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
axum-extra = { version = "0.12.3", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
# sqlx removed - SeaORM uses it internally via sqlx-mysql feature
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
bytes = "1.11.0"
futures = "0.3"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
reqwest = { version = "0.12.28", features = ["json", "stream", "multipart"] }
http = "1.4.0"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
sha1 = "0.10.6"
data-url = "0.3.2"
base64 = "0.22.1"
tokio-util = { version = "0.7.17", features = ["codec"] }
async-trait = "0.1.89"
regex = "1.12.2"
oxidize-pdf = "1.6.7"
infer = "0.19.0"
ffmpeg-next = { version = "8", optional = true }
once_cell = "1.21.3"
urlencoding = "2.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
hyper = "1.8.1"
url = "2.5.7"
rand = "0.9.2"
tempfile = "3.24.0"
mime_guess = "2.0.5"
lazy_static = "1.5"
tower-http = { version = "0.6.8", features = ["fs", "cors", "compression-gzip", "compression-br", "compression-zstd"] }
backoff = { version = "0.4", features = ["futures", "tokio"] }
dashmap = "6.1"
deadpool-redis = { version = "0.22.0", features = ["serde"] }
rayon = "1.11"
tl = "0.7.8"
tower = { version = "0.5", features = ["make"] }
scraper = "0.25.0"
failure = "0.1"
flate2 = "1.1"
redis = { version = "0.32.7", features = ["tokio-rustls-comp"] }
thiserror = "2.0.17"
itertools = "0.14"
clap = { version = "4.5", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
config = { version = "0.15.19", features = ["toml"] }
chromiumoxide = { version = "0.8.0", default-features = false, features = ["tokio-runtime"] }
ts-rs = { version = "11.1.0", features = ["serde-compat"] }
governor = "0.10.4"
tokio-cron-scheduler = "0.15.1"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.9"
log = "0.4"


# Dependensi yang hanya dibutuhkan untuk build script (build.rs)
[build-dependencies]
tempfile = "3.24.0"
blake3 = "1.8.2"
regex = "1.12.2"
anyhow = "1.0"
once_cell = "1.21.3"
env_logger = "0.11"
thiserror = "2.0.17"
log = "0.4"
itertools = "0.14"
rayon = "1.11"
walkdir = "2.5"
openapiv3 = "2.2.0"
jsonschema = "0.38.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.28", features = ["json", "stream", "multipart"] }

# Dependensi yang hanya dibutuhkan untuk tes
[dev-dependencies]
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "mock"] }

# Definisi binary untuk scaffolder
[[bin]]
name = "scaffold"
path = "src/bin/scaffold.rs"


# Unified CLI (alias for scaffold_enhanced)
[[bin]]
name = "rex"
path = "src/bin/scaffold_enhanced.rs"

# [[bin]]
# name = "test_scaffold"
# path = "src/bin/test_scaffold.rs"

# [[bin]]
# name = "test_apis"
# path = "src/bin/test_apis.rs"



[lints.rust]
unsafe_code = "forbid"
unused_variables = "deny"
unused_imports = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[features]
# default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next"]

# Profile optimasi untuk production - fokus pada performa runtime maksimal
[profile.release]
opt-level = 3           # Optimasi level maksimal
lto = "fat"             # Full LTO untuk inlining maksimal dan binary optimal
codegen-units = 1       # Single codegen unit untuk optimasi maksimal (lebih lambat build, binary lebih cepat)
incremental = false     # Disable incremental untuk optimasi penuh
debug = false           # No debug info untuk binary lebih kecil
strip = true            # Strip symbols untuk binary lebih kecil
panic = "abort"         # Abort on panic (binary lebih kecil dan lebih cepat)
