[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcrypt = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
data-url = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
image = { workspace = true, default-features = false, features = ["jpeg", "png"] }
infer = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
headless_chrome = "0.9.0" # Or a newer compatible version
redis = { version = "0.25.3" }
once_cell = "1.19.0"
mime_guess = "2.0.14"

[dependencies]
url = "2.5.0"
regex = "1.10.5"
socks = "0.3.5"
http-proxy = "0.6.0"

[dev-dependencies]
tokio-test = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["mysql"] }
