[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcrypt = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
data-url = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
image = { workspace = true, default-features = false, features = ["jpeg", "png"] }
infer = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
redis = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }
oxidize-pdf = { workspace = true }
mime_guess = { workspace = true }
failure = { workspace = true } # Added for headless_chrome compatibility
headless_chrome = { workspace = true } # Use the latest version or a compatible one
tempfile = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
axum-extra = { workspace = true, features = ["cookie"] }
[dev-dependencies]
